src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>ANZ Customer Feedback</fullName>
        <description>Used for cases raised as ANZ Customer Feedback</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Initiated</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready For Closure</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contact Ops</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Info%28Hold%29</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Account.SJM_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SJM_Id__c</fullName>
        <description>SJM Customer Id</description>
        <inlineHelpText>SJM Sold To Number</inlineHelpText>
        <label>Account SJM Id</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Status__c</fullName>
        <label>RFP Update Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non- applicatble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Committed(MS/Rev)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Vendor</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Tier Commitments/Attainments</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Access W/ Commitment to other Vendors</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Open Access/Capped(All Play)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Open(pending award)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Vendor</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Tri Vendor</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAPA_IR_Number__c</fullName>
        <description>Corrective &amp; Preventive Action or Issue Review reference number</description>
        <inlineHelpText>Corrective &amp; Preventive Action or Issue Review reference number</inlineHelpText>
        <label>CAPA/IR Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Request_Number__c</fullName>
        <inlineHelpText>If a change request needs to be lodged based on this case record the reference number in this field.</inlineHelpText>
        <label>Change Request Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Info_Date__c</fullName>
        <label>Complete Info Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Position_Title__c</fullName>
        <label>Contact Position Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Desired_Outcome__c</fullName>
        <inlineHelpText>Note on how customer would like to see this issue resolved</inlineHelpText>
        <label>Customer Desired Outcome</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Ref__c</fullName>
        <description>Customer Reference</description>
        <inlineHelpText>Customer Reference. Could be there PO number for example</inlineHelpText>
        <label>Customer Ref</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reply_Requested__c</fullName>
        <label>Customer Reply Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Quoted__c</fullName>
        <label>Date Quoted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <description>Deal Type</description>
        <inlineHelpText>Contracts Only</inlineHelpText>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Disposable/Implantable Product Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone Rebate Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Cost Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge to Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Alternative (CAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QP Offset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_information__c</fullName>
        <description>Detailed info about the case</description>
        <inlineHelpText>Put as much detail about what the customer has reported, and what we have investigated and found</inlineHelpText>
        <label>Detailed information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Draft_distribution_date__c</fullName>
        <label>Draft distribution date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entered_Updated_in_Rebate_Systems__c</fullName>
        <inlineHelpText>Rebate Analyst Only</inlineHelpText>
        <label>Entered/Updated in Rebate Systems</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee_Setup_Notes__c</fullName>
        <label>Fee Setup Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forecast_Entered_for_Accruals__c</fullName>
        <label>Forecast Entered for Accruals</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Platform_Info__c</fullName>
        <inlineHelpText>Hardware Platform and options requested.</inlineHelpText>
        <label>Hardware Platform Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Progress_Track__c</fullName>
        <label>In Progress Track</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Progress_to_Quoted_Hours__c</fullName>
        <formula>ROUND( 9 * ( 
( 5 * FLOOR( ( DATEVALUE( Quoted_Track__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, 
MOD( DATEVALUE( Quoted_Track__c ) - DATE( 1900, 1, 8), 7) + 
MIN( 1, 24 / 9 * ( MOD( Quoted_Track__c - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE(  In_Progress_Track__c  ) - DATE( 1900, 1, 8) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( In_Progress_Track__c ) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 24 / 9 * ( MOD( In_Progress_Track__c - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1) ) ) 
) 
) 
), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Progress to Quoted (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Info_Hold_Set__c</fullName>
        <label>Info Hold Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Info_Hold_to_Current_Hours__c</fullName>
        <formula>IF(ISPICKVAL(Status, &quot;Info(Hold)&quot;), 
ROUND( 9 * ( 
( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, 
MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) + 
MIN( 1, 24 / 9 * ( MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE( Info_Hold_Set__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( Info_Hold_Set__c ) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 24 / 9 * ( MOD( Info_Hold_Set__c- DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1) ) ) 
) 
) 
), 
0 ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info Hold to Current (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installedproduct__c</fullName>
        <label>Installed Product</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Info_Hold_Status__c</fullName>
        <label>Left Info Hold Status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the Contract  Number of the Master agreement to which this new document (amendment, contract) refers.</inlineHelpText>
        <label>Master Agreement Reference</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases (Master Agreement Reference)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_to_Quoted_Hours__c</fullName>
        <formula>ROUND( 9 * (
   ( 5 * FLOOR( ( DATEVALUE(  Quoted_Track__c ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Quoted_Track__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 9 * ( MOD( Quoted_Track__c - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE(  CreatedDate  ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 9 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
        <label>New to Quoted (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Revisions__c</fullName>
        <inlineHelpText>Is this a revision to a recent request? Then, count as revision. If it&apos;s been &gt; ~2 weeks using same document, or it&apos;s a large change, then create a new entry. Note: RFP team will count every revision prior to submission date.</inlineHelpText>
        <label>Number of Revisions</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Scheduled_date__c</fullName>
        <label>Onsite Scheduled date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Request Contract</relationshipLabel>
        <relationshipName>Request_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Name__c</fullName>
        <inlineHelpText>Name of someone who&apos;s neither a practitioner or contact. Might be a vendor, or a patient</inlineHelpText>
        <label>Other Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Measurement_Starting_Period__c</fullName>
        <label>Performance Measurement Starting Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Structure__c</fullName>
        <label>Price Structure</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open Access/Capped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tri-Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Committed (MS/Rev)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Tier Commitments/Attainments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Access W/ Commitment to other Vendors</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Floor__c</fullName>
        <description>Type of Pricing for the Contract or Quote</description>
        <inlineHelpText>Type of Pricing for the Contract or Quote</inlineHelpText>
        <label>Pricing Floor</label>
        <picklist>
            <picklistValues>
                <fullName>List Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <inlineHelpText>Only for product related, not master T&amp;Cs and non-specific NDAs</inlineHelpText>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Implants/Disposables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quoted_Track__c</fullName>
        <label>Quoted Track</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quoted_to_Close_Hours__c</fullName>
        <formula>ROUND( 9 * ( 
( 5 * FLOOR( ( DATEVALUE(  ClosedDate  ) - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, 
MOD( DATEVALUE( ClosedDate ) - DATE( 1900, 1, 8), 7) + 
MIN( 1, 24 / 9 * ( MOD( ClosedDate - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE(  Quoted_Track__c  ) - DATE( 1900, 1, 8) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( Quoted_Track__c ) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 24 / 9 * ( MOD( Quoted_Track__c - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1) ) ) 
) 
) 
), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quoted to Close (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Consultant__c</fullName>
        <label>RFP Consultant</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aptitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ariba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curvo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Contracting Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MedApproved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MedPricer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vizient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None/Unknown</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Due_Date__c</fullName>
        <label>RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Response__c</fullName>
        <label>RFP Response</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Participating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Participating</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_Forecast_Form_Submitted__c</fullName>
        <label>Rebate Forecast Form Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_Notes__c</fullName>
        <label>Program Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rebate_Starting_period__c</fullName>
        <label>Rebate starting period</label>
        <picklist>
            <picklistValues>
                <fullName>Execution Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Following Fiscal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QP Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Differential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Failure Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AED Rebate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <inlineHelpText>Only available if Status is &apos;Rejected&apos;</inlineHelpText>
        <label>Rejected Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM not participating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the Contract Number of the contract to which this new document (amendment, contract) refers</inlineHelpText>
        <label>Related Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Type of Request</description>
        <inlineHelpText>Type of Request</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <label>Requester Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <label>Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Case Resolution</description>
        <inlineHelpText>Enter the remedial action we have taken to resolve the issue.</inlineHelpText>
        <label>Resolution</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SJM_Employee_informed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If there has been another SJM employee informed of this issue prior to this case being opened please list their name here.</inlineHelpText>
        <label>SJM Employee informed</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SJM_Member_Responsible__c</fullName>
        <label>SJM Member Responsible</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_Ref_No__c</fullName>
        <inlineHelpText>Any SJM internal reference</inlineHelpText>
        <label>SJM Ref No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrg_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrg Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Request Contract</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce__c</fullName>
        <formula>ISBLANK( SuppliedName )</formula>
        <label>Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicemax_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicemax Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Capital Services Cases</relationshipLabel>
        <relationshipName>Servicemax_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicemax_SJM_ID__c</fullName>
        <label>Servicemax SJM ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_National_Contract__c</fullName>
        <label>Standard/National Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Contract</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type_1__c</fullName>
        <label>Sub Type 1</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Instead Of Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Item Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Payer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Serial Or Batch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Ship To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Sold To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect TM linking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper Instead Of Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM staff complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM staff praise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Someone Else&apos;s Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>